--- a/first project/src/less/article.css
+++ b/first project/src/less/article.css
@@ -4,13 +4,14 @@
   grid-row-start: 3;
   grid-row-end: 4;
 }
-.article_searcher_buttonSearch {
+#article_searcher_buttonSearch {
   height: 40px;
   width: 80px;
   margin: 10px;
   border-radius: 2px;
   border: none;
   outline-color: aquamarine;
+  box-shadow: 2px 2px 1px 1px #c7c7c7;
 }
 .article_searcher_inputSearch {
   margin: 10px;
