--- a/first project/src/less/article.less
+++ b/first project/src/less/article.less
@@ -1,8 +1,15 @@
 .article_searcher{
     grid-column-start: 2;
     grid-column-end: 4;
-    grid-row-start: 3;
-    grid-row-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+ul{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    list-style: none;
 }
 #article_searcher_buttonSearch{
     height:40px;
@@ -10,14 +17,13 @@
     margin: 10px;
     border-radius: 2px;
     border: none;
-    outline-color: aquamarine;
+    outline-color:#dfdfdf;
     box-shadow: 2px 2px 1px 1px #c7c7c7;
 }
 .article_searcher_inputSearch{
     margin: 10px;
     padding: 5px;
     height: 20px;
-    width: 200px;
-    background-color: rgba(226, 251, 255, 0.2);
+    width: 300px;
     outline: none;
 }
