--- a/first project/src/less/searchResult.css
+++ b/first project/src/less/searchResult.css
@@ -1,10 +1,38 @@
 .recipeDish {
-  background: #ddd;
+  display: grid;
+  grid-template-columns: 250px auto 1fr;
+  grid-template-rows: auto 60px 80px;
   margin: 10px;
   padding: 10px;
-  border: 1px solid;
+}
+.recipeDish .title {
+  line-height: 1.5;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
 }
 .recipeDish img {
-  width: 20%;
-  height: 20%;
+  height: 100%;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 4;
+}
+.recipeDish input {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  margin: 10px;
+  width: 120px;
+  height: 30px;
+  border: 1px solid #156270;
+  background: #fff;
+}
+.recipeDish .ingredients {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
 }
