--- a/first project/src/style/header/header.less
+++ b/first project/src/style/header/header.less
@@ -1,3 +1,4 @@
+@color-button:rgb(0, 154, 243);
 .header{
     grid-column-start: 2;
     grid-column-end: 3;
@@ -12,10 +13,10 @@
     }
     .header__button-search, .header__button-favorites{
         margin: 10px;
-        background: rgb(0, 154, 243);
+        background: @color-button;
         color: #fff;
         border: none;
         width: 70px;
-        height: 30px;
+        height: 40px;
     }
 }
