--- a/first project/src/style/layout.css
+++ b/first project/src/style/layout.css
@@ -5,5 +5,5 @@ body {
 .application {
   display: grid;
   grid-template-columns: 1fr 500px 1fr;
-  grid-template-rows: 200px 1fr;
+  grid-template-rows: 200px 1fr 200px;
 }
