--- a/first project/src/style/article/article.css
+++ b/first project/src/style/article/article.css
@@ -11,7 +11,7 @@
 .article .article__result-search-api1 .article__recipe-dish,
 .article .article__result-search-api2 .article__recipe-dish {
   display: grid;
-  grid-template-columns: 250px auto 100px;
+  grid-template-columns: 250px 1fr 100px;
   grid-template-rows: 80px auto auto;
   margin: 10px;
   padding: 10px;
@@ -80,7 +80,7 @@
 .article .article__result-search-api2 .article__recipe-dish .article__ingredients:before {
   content: " ";
   position: absolute;
-  left: 10px;
+  left: -10px;
   bottom: -40px;
   width: 40px;
   height: 40px;
@@ -92,9 +92,9 @@
 .article .article__result-search-api2 .article__recipe-dish .article__ingredients:after {
   content: " ";
   position: absolute;
-  width: 20px;
-  height: 20px;
-  left: 5px;
+  width: 25px;
+  height: 25px;
+  left: -20px;
   background-color: #dbdbdb;
   border: 6px solid #666;
   bottom: -60px;
