--- a/first project/src/style/article/article.less
+++ b/first project/src/style/article/article.less
@@ -9,7 +9,7 @@
         list-style: none;
         .article__recipe-dish{
             display: grid;
-            grid-template-columns:250px auto 100px;
+            grid-template-columns:250px 1fr 100px;
             grid-template-rows:80px auto auto;
             margin: 10px;
             padding: 10px;
@@ -68,7 +68,7 @@
             .article__ingredients:before{
                 content: " ";
                 position: absolute;
-                left: 10px;
+                left: -10px;
                 bottom: -40px;
                 width: 40px;
                 height: 40px;
@@ -79,9 +79,9 @@
             .article__ingredients:after{
                 content: " ";
                 position: absolute;
-                width: 20px;
-                height: 20px;
-                left: 5px;
+                width: 25px;
+                height: 25px;
+                left: -20px;
                 background-color: rgb(219, 219, 219);
                 border: 6px solid #666;
                 bottom: -60px;
