--- a/first project/src/style/header/header.css
+++ b/first project/src/style/header/header.css
@@ -8,7 +8,7 @@
 .header .header__search-line {
   width: 200px;
   height: 20px;
-  margin: 10px;
+  margin: 10px 0px;
   padding: 5px;
 }
 .header .header__button-search,
@@ -19,4 +19,30 @@
   border: none;
   width: 70px;
   height: 40px;
+}
+.header .header__button-drop-down {
+  position: relative;
+  margin: 0px;
+  padding-left: 0px;
+  background: #009af3;
+  color: #fff;
+  border: none;
+  width: 100px;
+  height: 34px;
+}
+.header .header__button-drop-down:after {
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  right: 7px;
+  top: 45%;
+  border: 40px solid transparent;
+  border-top-color: #fff;
+  border-width: 6px 6px 0px 6px;
+  border-style: solid;
+}
+.header .header__list-drop-down {
+  height: 50px;
+  width: 100px;
 }
