--- a/first project/src/style/article/article.less
+++ b/first project/src/style/article/article.less
@@ -5,8 +5,9 @@
     grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
-    .article__result-search-api1, .article__result-search-api2{
+    .article__result-search-api{
         list-style: none;
+        padding-left: 20px;
         .article__recipe-dish{
             display: grid;
             grid-template-columns:250px 1fr 100px;
