--- a/first project/src/style/header/header.less
+++ b/first project/src/style/header/header.less
@@ -1,11 +1,18 @@
 @color-button: rgb(0, 154, 243);
 .header {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: auto auto auto auto;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
     margin: auto;
     .header__search-line {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 2;
         width: 200px;
         height: 20px;
         margin: 10px 0px;
@@ -13,22 +20,36 @@
     }
     .header__button-search,
     .header__button-favorites {
-        margin: 10px;
+        margin: 7px 10px 7px 10px;
         background: @color-button;
         color: #fff;
         border: none;
         width: 70px;
         height: 40px;
     }
+    .header__button-search {
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
     .header__button-drop-down {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
         position: relative;
-        margin: 0px;
-        padding-left:0px; 
+        padding-left: 0px;
         background: @color-button;
         color: #fff;
         border: none;
         width: 100px;
         height: 34px;
+        cursor: pointer;
+    }
+    .header__button-drop-down:hover,
+    .header__button-drop-down:focus {
+        background-color: #2980B9;
     }
     .header__button-drop-down:after {
         content: "";
@@ -38,12 +59,37 @@
         right: 7px;
         top: 45%;
         border: 40px solid transparent;
-        border-top-color:#fff;
+        border-top-color: #fff;
         border-width: 6px 6px 0px 6px;
         border-style: solid;
     }
-    .header__list-drop-down{
+    .header__list-drop-down {
+        position: relative;
+        display: inline-block;
+        margin: 10px 10px 0px 0px;
         height: 50px;
         width: 100px;
+    }
+    .header__list-api {
+        display: none;
+        position: absolute;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        background: @color-button;
+        color: #fff;
+        
+    }
+    .header__list-api a{
+        color: #fff;
+        margin: 0 auto;
+        padding: 6px;
+        display: block;
+        text-decoration: none;
+    }
+    .header__list-api a:hover{
+        background-color: rgb(68, 148, 201);
+    }
+    .header__list-api_show{
+        display: block;
     }
 }
