--- a/first project/src/style/header/header.less
+++ b/first project/src/style/header/header.less
@@ -18,6 +18,10 @@
         margin: 10px 0px;
         padding: 5px;
     }
+    .header__button-drop-down, .header__button-favorites,.header__button-search{
+        outline: none;
+        cursor: pointer;
+    }
     .header__button-search,
     .header__button-favorites {
         margin: 7px 10px 7px 10px;
@@ -45,10 +49,11 @@
         border: none;
         width: 100px;
         height: 34px;
-        cursor: pointer;
     }
+    .header__button-search:hover,
+    .header__button-favorites:hover,
     .header__button-drop-down:hover,
-    .header__button-drop-down:focus {
+    {
         background-color: #2980B9;
     }
     .header__button-drop-down:after {
