--- a/first project/src/style/layout.less
+++ b/first project/src/style/layout.less
@@ -1,9 +1,10 @@
 body{
     width: 960px;
     margin: 0 auto;
+    overflow: scroll;
 }
 .application{
     display: grid;
-    grid-template-columns:1fr 600px 1fr;
+    grid-template-columns:1fr 510px 1fr;
     grid-template-rows:200px 1fr 200px;
 }
