--- a/first project/src/style/article/article.css
+++ b/first project/src/style/article/article.css
@@ -6,7 +6,7 @@
 }
 .article .article__result-search-api {
   list-style: none;
-  padding-left: 20px;
+  padding-left: 0px;
 }
 .article .article__result-search-api .article__recipe-dish {
   display: grid;
@@ -38,6 +38,12 @@
   background: #009af3;
   color: #fff;
   border: none;
+  outline: none;
+  cursor: pointer;
+}
+.article .article__result-search-api .article__recipe-dish .article__button-favorites:hover,
+.article .article__result-search-api .article__recipe-dish .article__button-ingredients:hover {
+  background-color: #2980B9;
 }
 .article .article__result-search-api .article__recipe-dish .article__button-favorites {
   width: 70px;
